test/unstable-keyword/in-function.good
$CHPL_HOME/test/unstable-keyword/in-function.helper.chpl:2: In function 'main':
$CHPL_HOME/test/unstable-keyword/in-function.helper.chpl:4: warning: sparse domains are unstable, their behavior is likely to change in the future
$CHPL_HOME/test/unstable-keyword/in-function.helper.chpl:2: error: done
