test/unstable-keyword/in-function.helper.chpl

proc main {
  var D = {1..5};
  var SD: sparse subdomain( D );
  compilerError("done");
}
